<resources>
    <string name="app_name">Bull\'s rent</string>
    <string name="bull_s_rent">Bull\'s Rent</string>
    <string name="elshafee">Elshafee</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="go">Go</string>
    <string name="hello_there">HELLO THERE,</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="new_user_signup">new user? signup</string>
    <string name="welcome">Welcome,</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">phone Number</string>
    <string name="already_have_account_login">Already Have account? Login</string>
</resources>